<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentLayoutContactos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/marvel_red"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/destino_consulta"
                    android:textSize="20sp"
                    android:textColor="@color/marvel_red" />

                <Spinner
                    android:id="@+id/miSpinner"
                    android:layout_width="150dp"
                    android:layout_height="40dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp">

                <Switch
                    android:id="@+id/modoHulk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="15dp"
                    android:minHeight="48dp"
                    android:text="@string/modo_hulk"
                    android:textColor="@color/marvel_red"
                    android:textSize="25sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/marvel_red"
                    android:textSize="25sp"
                    android:text="@string/enviar" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valoranos"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:background="@drawable/rounded_corner"
                android:layout_gravity="center"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/valoracion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:stepSize="1" />

            <TextView
                android:id="@+id/resultadoEncuesta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:visibility="invisible" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conocido_app"
                android:background="@drawable/rounded_corner"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColor="@color/black"
                    android:text="@string/contactos" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/redes_sociales"
                    android:textColor="@color/black" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColor="@color/black"
                    android:text="@string/app_store" />

            </RadioGroup>

        </LinearLayout>


    </FrameLayout>

</FrameLayout>