<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_tiendas">

    <TextView
        android:id="@+id/txtViewNombreTienda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginTop="5dp"/>
    <ImageView
        android:id="@+id/imgViewTienda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_below="@+id/txtViewNombreTienda"
        android:layout_marginVertical="10dp"
        android:contentDescription="@string/imagen_de_la_tienda"/>
    <TextView
        android:id="@+id/txtViewDireccionTienda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_below="@+id/imgViewTienda"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"/>
    <CheckBox
        android:id="@+id/checkboxTienda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar"
        android:layout_below="@+id/txtViewDireccionTienda"
        android:layout_marginHorizontal="40dp"/>
    <ImageButton
        android:id="@+id/btnLlamar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/marvel_red"
        android:src="@drawable/llamada"
        android:layout_toEndOf="@+id/checkboxTienda"
        android:layout_below="@id/txtViewDireccionTienda"
        android:contentDescription="@string/llamar_a_la_tienda" />

</RelativeLayout>